# ----

./: .gitignore  AGENTS.md  application_controller.py  calculator.py  config_manager.py  data_manager.py  doc.md  expression_parser.py  io_interface.py  main.py  pyproject.toml
recipes/: example.json  test.json  test_cache.json
shared/: __init__.py  security.py
shared/api/: __init__.py  calculation_api.py  recipe_api.py  session.py
shared/utils/: __init__.py
test/: test_recipe_api.py  web_server.py
tests/: conftest.py  test_application_controller.py  test_byproduct_pool.py  test_config_manager.py  test_crafting_calculator.py  test_crafting_node.py  test_data_manager.py  test_expression_parser.py  test_integration.py  test_io_interface.py  test_net_output_calculation.py  test_path_comparison_engine.py  test_raw_resource_devices.py  test_special_recipe_detection.py  test_special_recipe_integration.py  test_web_gui.py
web/: test_recipe_api.py  web_server.py
web/templates/: index.html
web_gui/: app.py
web_gui/static/css/: main.css
web_gui/static/js/: main.js
web_gui/templates/: base.html  calculate.html  dashboard.html  recipe_management.html  select_game.html
