[project]
name = "craft-calculator"
version = "0.1.0"
description = "自动化建造游戏通用合成计算器，用于计算生产链和所需设备数量"
requires-python = ">=3.12"
dependencies = [
    "flask>=2.0",
    "flask-wtf>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "slow: 慢速测试",
]
